--- a/codelab-extensions/lab-6-hello-world/css/styles.css
+++ b/codelab-extensions/lab-6-hello-world/css/styles.css
@@ -14,3 +14,30 @@ body {
 #world {
     color: cadetblue;
 }
+
+.cnt-github-link {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.cnt-github-link .tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    background-color: white;
+    color:blue;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.cnt-github-link:hover .tooltip-text {
+    visibility: visible;
+  }
